Create a react app and publish it to github pages

--- a/package.json
+++ b/package.json
@@ -2,13 +2,17 @@
   "name": "a3portfolio",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://awp3.github.io/a3portfolio",
   "dependencies": {
+    "gh-pages": "^1.1.0",
     "react": "^16.2.0",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.2.0",
     "react-scripts": "^1.1.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "a3portfolio -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
